fixed overflow on navbar

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -880,7 +880,7 @@ body {
     */
 
     .showcase-header {
-        padding: 0 .5rem;
+        padding: 0 1rem;
     }
 
     .showcase-logo {
